crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__template_only_sfc_ssr_exports_default_component.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---

function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div>Hello</div>`)
}

const _sfc_main = {}
_sfc_main.ssrRender = ssrRender
export default _sfc_main
